--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@turf/turf": "^5.1.6",
     "core-js": "^3.6.4",
     "element-ui": "^2.13.1",
     "mapbox-gl": "^1.10.0",
+    "ol": "^6.3.1",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6"
   },
