--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@turf/turf": "^5.1.6",
     "core-js": "^3.6.4",
     "element-ui": "^2.13.1",
+    "leaflet": "^1.6.0",
     "mapbox-gl": "^1.10.0",
     "ol": "^6.3.1",
     "vue": "^2.6.11",
